--- a/natours/index.html
+++ b/natours/index.html
@@ -11,7 +11,17 @@
 </head>
 
 <body>
-	<header class="header"></header>
+	<header class="header">
+		<div class="logo-box">
+			<img src="./logo/logo-white.png" alt="logo" class="logo">
+		</div>
+		<div class="text-box">
+			<h1 class="head-primary">
+				<span class="head-primary-main">Outdoors</span>
+				<span class="head-primary-sub">is where life happens</span>
+			</h1>
+		</div>
+	</header>
 </body>
 
 </html>
