--- a/natours/index.html
+++ b/natours/index.html
@@ -20,6 +20,7 @@
 				<span class="head-primary-main">Outdoors</span>
 				<span class="head-primary-sub">is where life happens</span>
 			</h1>
+			<a href="#" class="btn btn-white">Discover out tours</a>
 		</div>
 	</header>
 </body>
