--- a/natours/index.html
+++ b/natours/index.html
@@ -2,27 +2,27 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-	<link rel="stylesheet" href="./css/style.css">
-	<link rel="shortcut icon" type="image/png" href="./logo/favicon.png">
-	<title>Natours | Exciting tours for adventurous people</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="shortcut icon" type="image/png" href="./logo/favicon.png">
+  <title>Natours | Exciting tours for adventurous people</title>
 </head>
 
 <body>
-	<header class="header">
-		<div class="logo-box">
-			<img src="./logo/logo-white.png" alt="logo" class="logo">
-		</div>
-		<div class="text-box">
-			<h1 class="head-primary">
-				<span class="head-primary-main">Outdoors</span>
-				<span class="head-primary-sub">is where life happens</span>
-			</h1>
-			<a href="#" class="btn btn-white animated">Discover out tours</a>
-		</div>
-	</header>
+  <header class="header">
+    <div class="header__logo-box">
+      <img src="./logo/logo-white.png" alt="logo" class="header__logo">
+    </div>
+    <div class="header__text-box">
+      <h1 class="head-primary">
+        <span class="head-primary--main">Outdoors</span>
+        <span class="head-primary--sub">is where life happens</span>
+      </h1>
+      <a href="#" class="btn btn--white animated">Discover out tours</a>
+    </div>
+  </header>
 </body>
 
 </html>
