--- a/natours/index.html
+++ b/natours/index.html
@@ -23,6 +23,37 @@
       <a href="#" class="btn btn--white animated">Discover out tours</a>
     </div>
   </header>
+
+  <article class="grid">
+    <section class="row">
+      <div class="col-1-of-2">1 of 2</div>
+      <div class="col-1-of-2">1 of 2</div>
+    </section>
+    <section class="row">
+      <div class="col-1-of-3">1 of 3</div>
+      <div class="col-1-of-3">1 of 3</div>
+      <div class="col-1-of-3">1 of 3</div>
+    </section>
+    <section class="row">
+      <div class="col-1-of-4">1 of 4</div>
+      <div class="col-1-of-4">1 of 4</div>
+      <div class="col-1-of-4">1 of 4</div>
+      <div class="col-1-of-4">1 of 4</div>
+    </section>
+    <section class="row">
+      <div class="col-1-of-3">1 of 3</div>
+      <div class="col-2-of-3">2 of 3</div>
+    </section>
+    <section class="row">
+      <div class="col-1-of-4">1 of 4</div>
+      <div class="col-1-of-4">1 of 4</div>
+      <div class="col-2-of-4">2 of 4</div>
+    </section>
+    <section class="row">
+      <div class="col-1-of-4">1 of 4</div>
+      <div class="col-3-of-4">3 of 4</div>
+    </section>
+  </article>
 </body>
 
 </html>
