Building the about section

--- a/natours/index.html
+++ b/natours/index.html
@@ -24,34 +24,18 @@
     </div>
   </header>
 
-  <article class="grid">
-    <section class="row">
-      <div class="col-1-of-2">1 of 2</div>
-      <div class="col-1-of-2">1 of 2</div>
-    </section>
-    <section class="row">
-      <div class="col-1-of-3">1 of 3</div>
-      <div class="col-1-of-3">1 of 3</div>
-      <div class="col-1-of-3">1 of 3</div>
-    </section>
-    <section class="row">
-      <div class="col-1-of-4">1 of 4</div>
-      <div class="col-1-of-4">1 of 4</div>
-      <div class="col-1-of-4">1 of 4</div>
-      <div class="col-1-of-4">1 of 4</div>
-    </section>
-    <section class="row">
-      <div class="col-1-of-3">1 of 3</div>
-      <div class="col-2-of-3">2 of 3</div>
-    </section>
-    <section class="row">
-      <div class="col-1-of-4">1 of 4</div>
-      <div class="col-1-of-4">1 of 4</div>
-      <div class="col-2-of-4">2 of 4</div>
-    </section>
-    <section class="row">
-      <div class="col-1-of-4">1 of 4</div>
-      <div class="col-3-of-4">3 of 4</div>
+  <article>
+    <section class="section-about">
+      <div class="center-text mg-bot-8">
+        <h2 class="head-secondary">
+          Exciting tours for adventurous people
+        </h2>
+      </div>
+
+      <div class="row">
+        <div class="col-1-of-2">Text content</div>
+        <div class="col-1-of-2">Image composition</div>
+      </div>
     </section>
   </article>
 </body>
