--- a/natours/index.html
+++ b/natours/index.html
@@ -26,14 +26,27 @@
 
   <article>
     <section class="section-about">
-      <div class="center-text mg-bot-8">
+      <div class="center-text mg-bot-big">
         <h2 class="head-secondary">
           Exciting tours for adventurous people
         </h2>
       </div>
 
       <div class="row">
-        <div class="col-1-of-2">Text content</div>
+        <div class="col-1-of-2">
+          <h3 class="head-tertiary mg-bot-small">You're going to fall in love with nature</h3>
+          <p class="parag">
+            GitHub Universe brings together developers and business leaders solving technology's greatest challenges. Learn and build
+            with the best in talks, trainings, and workshops
+          </p>
+          <h3 class="head-tertiary mg-bot-small">Live adventures like you never have before</h3>
+          <p class="parag">
+            The Universe After Party is free for all Universe badge holders, and you won’t want to miss it. Make sure to grab dinner
+            beforehand — we’ll only be serving light bites. We’ll announce which major musical act will be performing at
+            Mezzanine soon
+          </p>
+          <a href="#" class="btn-text">Learn more &rarr;</a>
+        </div>
         <div class="col-1-of-2">Image composition</div>
       </div>
     </section>
