--- a/natours/index.html
+++ b/natours/index.html
@@ -33,7 +33,7 @@
       </div>
 
       <div class="row">
-        <div class="col-1-of-2">
+        <section class="col-1-of-2">
           <h3 class="head-tertiary mg-bot-small">You're going to fall in love with nature</h3>
           <p class="parag">
             GitHub Universe brings together developers and business leaders solving technology's greatest challenges. Learn and build
@@ -46,8 +46,14 @@
             Mezzanine soon
           </p>
           <a href="#" class="btn-text">Learn more &rarr;</a>
-        </div>
-        <div class="col-1-of-2">Image composition</div>
+        </section>
+        <section class="col-1-of-2">
+          <div class="composition">
+            <img src="./img/nat-1-large.jpg" alt="1" class="composition__photo composition__photo--p1">
+            <img src="./img/nat-2-large.jpg" alt="2" class="composition__photo composition__photo--p2">
+            <img src="./img/nat-3-large.jpg" alt="3" class="composition__photo composition__photo--p3">
+          </div>
+        </section>
       </div>
     </section>
   </article>
