The features section

--- a/natours/index.html
+++ b/natours/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+
   <link rel="stylesheet" href="./css/style.css">
   <link rel="shortcut icon" type="image/png" href="./logo/favicon.png">
   <title>Natours | Exciting tours for adventurous people</title>
@@ -52,6 +53,50 @@
             <img src="./img/nat-1-large.jpg" alt="1" class="composition__photo composition__photo--p1">
             <img src="./img/nat-2-large.jpg" alt="2" class="composition__photo composition__photo--p2">
             <img src="./img/nat-3-large.jpg" alt="3" class="composition__photo composition__photo--p3">
+          </div>
+        </section>
+      </div>
+    </section>
+
+    <section class="section-features">
+      <div class="row">
+        <section class="col-1-of-4">
+          <div class="feature-box">
+            <figure class="feature-box__icon world"></figure>
+            <h3 class="head-tertiary mg-bot-small">Explore the world</h3>
+            <p class="feature-box__text">
+              GitHub Universe takes place in the emerging creative community of Dogpatch
+            </p>
+          </div>
+        </section>
+
+        <section class="col-1-of-4">
+          <div class="feature-box">
+            <figure class="feature-box__icon compass"></figure>
+            <h3 class="head-tertiary mg-bot-small">Meet nature</h3>
+            <p class="feature-box__text">
+              Once the home of an industrial shipyard, the neighborhood is now buzzing
+            </p>
+          </div>
+        </section>
+
+        <section class="col-1-of-4">
+          <div class="feature-box">
+            <figure class="feature-box__icon map"></figure>
+            <h3 class="head-tertiary mg-bot-small">Find your way</h3>
+            <p class="feature-box__text">
+              Designer studios and nightlife that are all served by the Third Street light rail
+            </p>
+          </div>
+        </section>
+
+        <section class="col-1-of-4">
+          <div class="feature-box">
+            <figure class="feature-box__icon heart"></figure>
+            <h3 class="head-tertiary mg-bot-small">Live a healthier life</h3>
+            <p class="feature-box__text">
+              Get the latest from community leaders, industry experts, and the GitHub Tea
+            </p>
           </div>
         </section>
       </div>
