Flip animation for cards

--- a/natours/index.html
+++ b/natours/index.html
@@ -101,6 +101,35 @@
         </section>
       </div>
     </section>
+
+    <section class="section-tours">
+      <div class="center-text mg-bot-big">
+        <h2 class="head-secondary">
+          Most popular tours
+        </h2>
+      </div>
+
+      <div class="row">
+        <div class="col-1-of-3">
+          <section class="card">
+            <div class="card__side card__side--front"></div>
+            <div class="card__side card__side--back card__side--back-1"></div>
+          </section>
+        </div>
+        <div class="col-1-of-3">
+          <section class="card">
+            <div class="card__side card__side--front"></div>
+            <div class="card__side card__side--back card__side--back-2"></div>
+          </section>
+        </div>
+        <div class="col-1-of-3">
+          <section class="card">
+            <div class="card__side card__side--front"></div>
+            <div class="card__side card__side--back card__side--back-3"></div>
+          </section>
+        </div>
+      </div>
+    </section>
   </article>
 </body>
 
