--- a/natours/index.html
+++ b/natours/index.html
@@ -112,19 +112,59 @@
       <div class="row">
         <div class="col-1-of-3">
           <section class="card">
-            <div class="card__side card__side--front"></div>
+            <article class="card__side card__side--front">
+              <div class="card__picture card__picture--1"></div>
+              <h4 class="card__head">
+                <span class="card__head-span card__head-span--1">The Sea Explorer</span>
+              </h4>
+              <div class="card__details">
+                <ul>
+                  <li>3 day tours</li>
+                  <li>Up to 30 people</li>
+                  <li>2 tour guides</li>
+                  <li>Sleep in cozy hotels</li>
+                  <li>Difficulty: easy</li>
+                </ul>
+              </div>
+            </article>
             <div class="card__side card__side--back card__side--back-1"></div>
           </section>
         </div>
+
         <div class="col-1-of-3">
           <section class="card">
-            <div class="card__side card__side--front"></div>
+            <article class="card__side card__side--front">
+              <div class="card__picture card__picture--2"></div>
+              <h4 class="card__head">
+                <span class="card__head-span card__head-span--2"></span>
+              </h4>
+              <div class="card__details">
+                <ul>
+                  <li>7 day tour</li>
+                  <li></li>
+                  <li></li>
+                </ul>
+              </div>
+            </article>
             <div class="card__side card__side--back card__side--back-2"></div>
           </section>
         </div>
+
         <div class="col-1-of-3">
           <section class="card">
-            <div class="card__side card__side--front"></div>
+            <article class="card__side card__side--front">
+              <div class="card__picture card__picture--3"></div>
+              <h4 class="card__head">
+                <span class="card__head-span card__head-span--3"></span>
+              </h4>
+              <div class="card__details">
+                <ul>
+                  <li>5 day tour</li>
+                  <li></li>
+                  <li></li>
+                </ul>
+              </div>
+            </article>
             <div class="card__side card__side--back card__side--back-3"></div>
           </section>
         </div>
