--- a/natours/index.html
+++ b/natours/index.html
@@ -141,8 +141,8 @@
               <div class="card__details">
                 <ul>
                   <li>7 day tour</li>
-                  <li></li>
-                  <li></li>
+                  <li>Up to 40 people</li>
+                  <li>6 tour guides</li>
                 </ul>
               </div>
             </article>
@@ -160,8 +160,8 @@
               <div class="card__details">
                 <ul>
                   <li>5 day tour</li>
-                  <li></li>
-                  <li></li>
+                  <li>Up to 15 people</li>
+                  <li>5 tour guides</li>
                 </ul>
               </div>
             </article>
