Back side of card

--- a/natours/index.html
+++ b/natours/index.html
@@ -127,7 +127,15 @@
                 </ul>
               </div>
             </article>
-            <div class="card__side card__side--back card__side--back-1"></div>
+            <div class="card__side card__side--back card__side--back-1">
+              <section class="card__wrap">
+                <div class="card__price-box">
+                  <p class="card__price-only">Only</p>
+                  <p class="card__price-value">$297</p>
+                </div>
+                <a href="#" class="btn btn--white">Buy now!</a>
+              </section>
+            </div>
           </section>
         </div>
 
@@ -146,7 +154,11 @@
                 </ul>
               </div>
             </article>
-            <div class="card__side card__side--back card__side--back-2"></div>
+            <div class="card__side card__side--back card__side--back-2">
+              <div class="card__wrap">
+
+              </div>
+            </div>
           </section>
         </div>
 
@@ -165,7 +177,11 @@
                 </ul>
               </div>
             </article>
-            <div class="card__side card__side--back card__side--back-3"></div>
+            <div class="card__side card__side--back card__side--back-3">
+              <div class="card__wrap">
+
+              </div>
+            </div>
           </section>
         </div>
       </div>
