--- a/natours/index.html
+++ b/natours/index.html
@@ -144,20 +144,26 @@
             <article class="card__side card__side--front">
               <div class="card__picture card__picture--2"></div>
               <h4 class="card__head">
-                <span class="card__head-span card__head-span--2"></span>
+                <span class="card__head-span card__head-span--2">The Forest Hiker</span>
               </h4>
               <div class="card__details">
                 <ul>
                   <li>7 day tour</li>
                   <li>Up to 40 people</li>
                   <li>6 tour guides</li>
+                  <li>Sleep in provided tents</li>
+                  <li>Difficulty: medium</li>
                 </ul>
               </div>
             </article>
             <div class="card__side card__side--back card__side--back-2">
-              <div class="card__wrap">
-
-              </div>
+              <section class="card__wrap">
+                <div class="card__price-box">
+                  <p class="card__price-only">Only</p>
+                  <p class="card__price-value">$497</p>
+                </div>
+                <a href="#" class="btn btn--white">Buy now!</a>
+              </section>
             </div>
           </section>
         </div>
@@ -167,23 +173,33 @@
             <article class="card__side card__side--front">
               <div class="card__picture card__picture--3"></div>
               <h4 class="card__head">
-                <span class="card__head-span card__head-span--3"></span>
+                <span class="card__head-span card__head-span--3">The Snow Adventure</span>
               </h4>
               <div class="card__details">
                 <ul>
                   <li>5 day tour</li>
                   <li>Up to 15 people</li>
                   <li>5 tour guides</li>
+                  <li>Sleep in provided tents</li>
+                  <li>Difficulty: hard</li>
                 </ul>
               </div>
             </article>
             <div class="card__side card__side--back card__side--back-3">
-              <div class="card__wrap">
-
-              </div>
+              <section class="card__wrap">
+                <div class="card__price-box">
+                  <p class="card__price-only">Only</p>
+                  <p class="card__price-value">$897</p>
+                </div>
+                <a href="#" class="btn btn--white">Buy now!</a>
+              </section>
             </div>
           </section>
         </div>
+      </div>
+
+      <div class="center-text mg-top-big">
+        <a href="#" class="btn btn--green">Discover all tours</a>
       </div>
     </section>
   </article>
