Building the stories section

--- a/natours/index.html
+++ b/natours/index.html
@@ -202,6 +202,28 @@
         <a href="#" class="btn btn--green">Discover all tours</a>
       </div>
     </section>
+
+    <section class="section-stories">
+      <div class="center-text mg-bot-big">
+        <h2 class="head-secondary">
+          We make people genuinely happy
+        </h2>
+      </div>
+      
+      <div class="row">
+        <div class="story">
+          <figure class="story__shape">
+            <img src="./img/nat-8.jpg" alt="person" class="story__img">
+          </figure>
+          <div class="story__text">
+            <h3 class="head-tertiary mg-bot-small">I had the best week ever with my family</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure magni illo labore quae non! Dicta, ipsum porro, eum recusandae quo numquam voluptatibus consequuntur consectetur quae distinctio aspernatur praesentium voluptatum vitae.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </article>
 </body>
 
