Blur filter for img

--- a/natours/index.html
+++ b/natours/index.html
@@ -209,9 +209,9 @@
           We make people genuinely happy
         </h2>
       </div>
-      
+
       <div class="row">
-        <div class="story">
+        <section class="story">
           <figure class="story__shape">
             <img src="./img/nat-8.jpg" alt="person" class="story__img">
             <figcaption class="story__caption">Mary Smith</figcaption>
@@ -219,10 +219,31 @@
           <div class="story__text">
             <h3 class="head-tertiary mg-bot-small">I had the best week ever with my family</h3>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure magni illo labore quae non! Dicta, ipsum porro, eum recusandae quo numquam voluptatibus consequuntur consectetur quae distinctio aspernatur praesentium voluptatum vitae.
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure magni illo labore quae non! Dicta, ipsum porro, eum recusandae
+              quo numquam voluptatibus consequuntur consectetur quae distinctio aspernatur praesentium voluptatum vitae.
             </p>
           </div>
-        </div>
+        </section>
+      </div>
+
+      <div class="row">
+        <section class="story">
+          <figure class="story__shape">
+            <img src="./img/nat-9.jpg" alt="person" class="story__img">
+            <figcaption class="story__caption">Jack Wilson</figcaption>
+          </figure>
+          <div class="story__text">
+            <h3 class="head-tertiary mg-bot-small">Wow! My life is completely different now</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure magni illo labore quae non! Dicta, ipsum porro, eum recusandae
+              quo numquam voluptatibus consequuntur consectetur quae distinctio aspernatur praesentium voluptatum vitae.
+            </p>
+          </div>
+        </section>
+      </div>
+
+      <div class="center-text mg-top-big">
+        <a href="#" class="btn-text">Learn more &rarr;</a>
       </div>
     </section>
   </article>
