--- a/natours/index.html
+++ b/natours/index.html
@@ -204,6 +204,12 @@
     </section>
 
     <section class="section-stories">
+      <div class="video">
+        <video class="video__content" autoplay muted loop>
+          <source src="./video/video.mp4" type="video/mp4">
+        </video>
+      </div>
+
       <div class="center-text mg-bot-big">
         <h2 class="head-secondary">
           We make people genuinely happy
