Form for booking

--- a/natours/index.html
+++ b/natours/index.html
@@ -252,6 +252,32 @@
         <a href="#" class="btn-text">Learn more &rarr;</a>
       </div>
     </section>
+
+    <section class="section-book">
+      <div class="row">
+        <section class="book">
+          <div class="book__form">
+            <form class="form">
+              <div class="mg-bot-medium">
+                <h2 class="head-secondary">
+                  Start booking now
+                </h2>
+              </div>
+
+              <fieldset class="form__group">
+                <input type="text" class="form__input" placeholder="Full Name" id="name" required>
+                <label for="name" class="form__label">Full name</label>
+              </fieldset>
+
+              <fieldset class="form__group">
+                <input type="email" class="form__input" placeholder="Email" id="email" required>
+                <label for="email" class="form__label">Email</label>
+              </fieldset>
+            </form>
+          </div>
+        </section>
+      </div>
+    </section>
   </article>
 </body>
 
