--- a/natours/index.html
+++ b/natours/index.html
@@ -264,15 +264,15 @@
                 </h2>
               </div>
 
-              <fieldset class="form__group">
+              <div class="form__group">
                 <input type="text" class="form__input" placeholder="Full Name" id="name" required>
                 <label for="name" class="form__label">Full name</label>
-              </fieldset>
+              </div>
 
-              <fieldset class="form__group">
+              <div class="form__group">
                 <input type="email" class="form__input" placeholder="Email" id="email" required>
                 <label for="email" class="form__label">Email</label>
-              </fieldset>
+              </div>
             </form>
           </div>
         </section>
