--- a/natours/index.html
+++ b/natours/index.html
@@ -273,6 +273,27 @@
                 <input type="email" class="form__input" placeholder="Email" id="email" required>
                 <label for="email" class="form__label">Email</label>
               </div>
+
+              <div class="form__group mg-bot-medium">
+                <div class="form__radio-group">
+                  <input type="radio" class="form__radio-input" id="sm" name="size">
+                  <label for="sm" class="form__radio-label">
+                    <span class="form__radio-button"></span>
+                    Small tour group
+                  </label>
+                </div>
+                <div class="form__radio-group">
+                  <input type="radio" class="form__radio-input" id="lg" name="size">
+                  <label for="lg" class="form__radio-label">
+                    <span class="form__radio-button"></span>
+                    Large tour group
+                  </label>
+                </div>
+              </div>
+
+              <div class="form__group">
+                <button class="btn btn--green">Next step &rarr;</button>
+              </div>
             </form>
           </div>
         </section>
