--- a/natours/index.html
+++ b/natours/index.html
@@ -300,6 +300,41 @@
       </div>
     </section>
   </article>
+
+  <footer class="footer">
+    <div class="footer__logo-box">
+      <img src="./logo/logo-green-2x.png" alt="logo" class="footer__logo">
+    </div>
+    <div class="row">
+      <div class="col-1-of-2">
+        <nav class="footer__nav">
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="#" class="footer__link">Company</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Contact us</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Career</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Privacy policy</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Terms</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div class="col-1-of-2">
+        <p class="footer__copyright">
+          Built by Mike Merezhko for online course.
+          <br> Copyright &copy; by Jonas Schmedtmann.
+        </p>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
