--- a/natours/index.html
+++ b/natours/index.html
@@ -12,6 +12,42 @@
 </head>
 
 <body>
+  <article class="nav">
+    <input type="checkbox" class="nav__checkbox" id="nav-toggle">
+    <label for="nav-toggle" class="nav__button">Menu</label>
+    <div class="nav__back">&nbsp;</div>
+
+    <nav class="nav__navigation">
+      <ul class="nav__list">
+        <li class="nav__item">
+          <a href="#" class="nav__link">
+            <span>01</span>About Natours
+          </a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">
+            <span>02</span>Your benefits
+          </a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">
+            <span>03</span>Popular tours
+          </a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">
+            <span>04</span>Stories
+          </a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">
+            <span>05</span>Book now
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </article>
+
   <header class="header">
     <div class="header__logo-box">
       <img src="./logo/logo-white.png" alt="logo" class="header__logo">
