--- a/natours/index.html
+++ b/natours/index.html
@@ -14,7 +14,11 @@
 <body>
   <article class="nav">
     <input type="checkbox" class="nav__checkbox" id="nav-toggle">
-    <label for="nav-toggle" class="nav__button">Menu</label>
+
+    <label for="nav-toggle" class="nav__button">
+      <span class="nav__icon">&nbsp;</span>
+    </label>
+    
     <div class="nav__back">&nbsp;</div>
 
     <nav class="nav__navigation">
