Building a pure CSS popup

--- a/natours/index.html
+++ b/natours/index.html
@@ -18,7 +18,7 @@
     <label for="nav-toggle" class="nav__button">
       <span class="nav__icon">&nbsp;</span>
     </label>
-    
+
     <div class="nav__back">&nbsp;</div>
 
     <nav class="nav__navigation">
@@ -375,6 +375,27 @@
       </div>
     </div>
   </footer>
+
+  <article class="popup">
+    <section class="popup__content">
+      <div class="popup__left">
+        <img src="./img/nat-8.jpg" alt="tour" class="popup__img">
+        <img src="./img/nat-9.jpg" alt="photo" class="popup__img">
+      </div>
+      <div class="popup__right">
+        <h2 class="head-secondary mg-bot-small">Start booking now</h2>
+        <h3 class="head-tertiary mg-bot-small">Important &ndash; Please, read these terms before booking</h3>
+        <p class="popup__text mg-bot-medium">
+          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+          penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque
+          eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate
+          eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis
+          pretium. Integer tincidunt. Cras dapibus
+        </p>
+        <a href="#" class="btn btn--green">Buy now</a>
+      </div>
+    </section>
+  </article>
 </body>
 
 </html>
