Functionality for popup

--- a/natours/index.html
+++ b/natours/index.html
@@ -61,7 +61,7 @@
         <span class="head-primary--main">Outdoors</span>
         <span class="head-primary--sub">is where life happens</span>
       </h1>
-      <a href="#" class="btn btn--white animated">Discover out tours</a>
+      <a href="#section-tours" class="btn btn--white animated">Discover our tours</a>
     </div>
   </header>
 
@@ -142,7 +142,7 @@
       </div>
     </section>
 
-    <section class="section-tours">
+    <section class="section-tours" id="section-tours">
       <div class="center-text mg-bot-big">
         <h2 class="head-secondary">
           Most popular tours
@@ -173,7 +173,7 @@
                   <p class="card__price-only">Only</p>
                   <p class="card__price-value">$297</p>
                 </div>
-                <a href="#" class="btn btn--white">Buy now!</a>
+                <a href="#popup" class="btn btn--white">Buy now!</a>
               </section>
             </div>
           </section>
@@ -202,7 +202,7 @@
                   <p class="card__price-only">Only</p>
                   <p class="card__price-value">$497</p>
                 </div>
-                <a href="#" class="btn btn--white">Buy now!</a>
+                <a href="#popup" class="btn btn--white">Buy now!</a>
               </section>
             </div>
           </section>
@@ -231,7 +231,7 @@
                   <p class="card__price-only">Only</p>
                   <p class="card__price-value">$897</p>
                 </div>
-                <a href="#" class="btn btn--white">Buy now!</a>
+                <a href="#popup" class="btn btn--white">Buy now!</a>
               </section>
             </div>
           </section>
@@ -376,13 +376,14 @@
     </div>
   </footer>
 
-  <article class="popup">
+  <article class="popup" id="popup">
     <section class="popup__content">
       <div class="popup__left">
         <img src="./img/nat-8.jpg" alt="tour" class="popup__img">
         <img src="./img/nat-9.jpg" alt="photo" class="popup__img">
       </div>
       <div class="popup__right">
+        <a href="#section-tours" class="popup__close">&times;</a>
         <h2 class="head-secondary mg-bot-small">Start booking now</h2>
         <h3 class="head-tertiary mg-bot-small">Important &ndash; Please, read these terms before booking</h3>
         <p class="popup__text mg-bot-medium">
