--- a/natours/index.html
+++ b/natours/index.html
@@ -90,9 +90,20 @@
         </section>
         <section class="col-1-of-2">
           <div class="composition">
-            <img src="./img/nat-1-large.jpg" alt="1" class="composition__photo composition__photo--p1">
-            <img src="./img/nat-2-large.jpg" alt="2" class="composition__photo composition__photo--p2">
-            <img src="./img/nat-3-large.jpg" alt="3" class="composition__photo composition__photo--p3">
+            <img srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"
+              sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+              src="./img/nat-1-large.jpg" alt="1"
+              class="composition__photo composition__photo--p1">
+
+            <img srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w"
+              sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+              src="./img/nat-2-large.jpg" alt="2"
+              class="composition__photo composition__photo--p2">
+
+            <img srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w"
+              sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+              src="./img/nat-3-large.jpg" alt="3"
+              class="composition__photo composition__photo--p3">
           </div>
         </section>
       </div>
@@ -345,9 +356,11 @@
     <div class="footer__logo-box">
       <picture class="footer__logo">
         <source srcset="logo/logo-green-small-1x.png 1x, logo/logo-green-small-2x.png 2x" media="(max-width: 37.5em)">
-        <img srcset="logo/logo-green-1x.png 1x, logo/logo-green-2x.png 2x" alt="logo">
+        <img srcset="logo/logo-green-1x.png 1x, logo/logo-green-2x.png 2x"
+          src="logo/logo-green-2x.png" alt="logo">
       </picture>
     </div>
+    
     <div class="row">
       <div class="col-1-of-2">
         <nav class="footer__nav">
