New design for resume

--- a/mma.cc.ua/index.html
+++ b/mma.cc.ua/index.html
@@ -7,56 +7,242 @@
     <meta name="description" content="Business card website" />
     <meta name="Keywords" content="Manviel" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>My website</title>
+    <title>Michael Merezhko</title>
   </head>
 
-  <body>
-    <div class="abs card">
-      <article class="flex col content">
-        <div class="box">
-          <img src="./img/avatar.jpg" alt="avatar" class="avatar" />
-        </div>
-        <div class="flex end">
-          <a
-            href="https://www.instagram.com/miannelst"
-            class="inst rad abs right bold"
-          >
-            Instagram
-          </a>
-        </div>
-        <div class="flex end">
-          <a
-            href="mailto:mmieriezhko@gmail.com"
-            class="email rad abs left bold"
-          >
-            Email
-          </a>
-        </div>
-        <h1 class="prime">Merezhko Michael</h1>
-        <span class="gray">Kharkiv</span>
+  <body class="flex center">
+    <div class="root">
+      <article class="container">
+        <h2 class="header">Merezhko Michael</h2>
+        <h4 class="subhead">Front End Developer</h4>
 
-        <main class="flex box center">
-          <a href="https://github.com/Manviel" class="button bold rad">
-            FOLLOW
-          </a>
-        </main>
+        <div class="grid">
+          <section class="card">
+            <h3 class="quote">Skills</h3>
+            <ul class="list">
+              <li>JavaScript, TypeScript, Python</li>
+              <li>React, Redux, Next.js, Apollo Client, Django</li>
+              <li>Angular 4+, RxJs</li>
+              <li>HTML5, CSS3, Flexbox, Grid</li>
+              <li>SQL, GraphQL</li>
+              <li>Git</li>
+              <li>Node.js, npm, Docker</li>
+            </ul>
+          </section>
 
-        <section class="flex box space">
-          <div class="flex col">
-            <p class="bold" id="follow"></p>
-            <span class="hub">following</span>
-          </div>
-          <div class="flex col">
-            <p class="bold" id="repos"></p>
-            <span class="hub">repositories</span>
-          </div>
-        </section>
+          <section class="card">
+            <h3 class="quote">Objective</h3>
+            <p class="subhead">
+              Continue the career of JS Developer in the company with the
+              possibility of development to the level of Senior
+            </p>
+          </section>
+        </div>
+      </article>
 
-        <footer class="flex box col">
-          <span class="gray">Student</span>
-          <span class="gray">Frontend developer</span>
-          <span class="gray">Like video games and news about technologies</span>
-        </footer>
+      <article class="container">
+        <h2 class="header">Academic Record</h2>
+        <h4 class="subhead">Systems Engineering</h4>
+
+        <div class="grid">
+          <section class="card">
+            <h3 class="quote">Languages</h3>
+            <ul class="list">
+              <li>English - Intermediate</li>
+              <li>Russian - Native</li>
+              <li>Ukrainian - Native</li>
+            </ul>
+          </section>
+
+          <section class="card">
+            <h3 class="quote">2015 - 2021</h3>
+            <p class="subhead">
+              O. M. Beketov National University of Urban Economy in Kharkiv
+            </p>
+          </section>
+        </div>
+      </article>
+
+      <article class="container">
+        <h2 class="header">Work experience</h2>
+        <h4 class="subhead" id="exp"></h4>
+
+        <div class="grid">
+          <section class="card">
+            <h3 class="quote">Technologies and tools</h3>
+            <ul class="list">
+              <li>React, Next JS, Apollo Client</li>
+              <li>Django-Graphene</li>
+              <li>GraphQL</li>
+            </ul>
+          </section>
+
+          <section class="card">
+            <h3 class="quote">Full Stack developer</h3>
+            <p class="subhead">
+              While working on this project, we developed an admin site and API
+              for law firm billing software, including custom fee schedules,
+              custom billing rates, automated billing functions and other
+              properties. Report and invoice creation. Task creation and
+              attaching. Sending invoices by email.
+            </p>
+          </section>
+        </div>
+
+        <div class="grid">
+          <section class="card">
+            <h3 class="quote">Technologies and tools</h3>
+            <ul class="list">
+              <li>React, Apollo Client</li>
+              <li>Django-Graphene</li>
+              <li>GraphQL</li>
+            </ul>
+          </section>
+
+          <section class="card">
+            <h3 class="quote">Full Stack developer</h3>
+            <p class="subhead">
+              The application for find matches when you’re on the bus, at work,
+              and even at home from the comfort of your couch. Provides live
+              updates of the messages in chat and Photo attachment. Creating
+              multiple accounts for user.
+            </p>
+          </section>
+        </div>
+
+        <div class="grid">
+          <section class="card">
+            <h3 class="quote">Technologies and tools</h3>
+            <ul class="list">
+              <li>Angular, React</li>
+              <li>REST API</li>
+            </ul>
+          </section>
+
+          <section class="card">
+            <h3 class="quote">Front end developer</h3>
+            <p class="subhead">
+              The app designed to automate all business processes in diplomatic
+              institutions all over the world. The system follows a
+              microservices design pattern, which allows for the distribution of
+              product modules in different locations, in or out of securely
+              encrypted networks. Every model can be scaled separately,
+              depending on the amount of data and performance requirements.
+            </p>
+          </section>
+        </div>
+
+        <div class="grid">
+          <section class="card">
+            <h3 class="quote">Technologies and tools</h3>
+            <ul class="list">
+              <li>Next JS, React</li>
+              <li>REST API</li>
+            </ul>
+          </section>
+
+          <section class="card">
+            <h3 class="quote">Front end developer</h3>
+            <p class="subhead">
+              This system consisted of two parts: a public blog and an admin
+              panel. Blog part is for viewing news, interviews, upcoming events
+              and magazines. On admin part user managed the content for each
+              element of blog (articles, events, interviews).
+            </p>
+          </section>
+        </div>
+
+        <div class="grid">
+          <section class="card">
+            <h3 class="quote">Technologies and tools</h3>
+            <ul class="list">
+              <li>Angular</li>
+              <li>OpenStreetMap</li>
+              <li>REST API</li>
+            </ul>
+          </section>
+
+          <section class="card">
+            <h3 class="quote">Front end developer</h3>
+            <p class="subhead">
+              The whole project aims to implement a platform for field
+              technicians operations. It will be able to manage the assistance
+              requests and assigning it to a technician by back office operators
+              using a Web Application. Each technician will report all the
+              activities related with the assistance using the Mobile
+              Application and all the information must flow back to the Backend
+              Engine and be made available to backoffice operators. On web part
+              users can manage the content depending the roles.
+            </p>
+          </section>
+        </div>
+
+        <div class="grid">
+          <section class="card">
+            <h3 class="quote">Technologies and tools</h3>
+            <ul class="list">
+              <li>React</li>
+              <li>REST API</li>
+              <li>Chrome Extension API</li>
+            </ul>
+          </section>
+
+          <section class="card">
+            <h3 class="quote">Front end developer</h3>
+            <p class="subhead">
+              This solution is aimed at users who want to know more about their
+              privacy and the data that they provide to various sites. The
+              extension provides answers to the most relevant privacy questions
+              that are available with a single click. If the user wanted to know
+              more, then he could purchase a paid subscription. A control panel
+              was also developed to track the number of subscriptions.
+            </p>
+          </section>
+        </div>
+      </article>
+
+      <article class="container">
+        <h2 class="header white">Additional Information</h2>
+        <h4 class="subhead white">
+          I expect interesting projects, new practical skills and opportunities
+          for professional growth
+        </h4>
+
+        <div class="grid">
+          <section class="flex card">
+            <img src="./img/avatar.jpg" alt="avatar" class="avatar" />
+
+            <div class="flex col">
+              <h3 class="quote">
+                OOP, React Native, Design patterns
+              </h3>
+
+              <a href="https://github.com/Manviel" class="btn github">
+                GitHub
+              </a>
+
+              <a href="https://www.instagram.com/miannelst" class="btn inst">
+                Instagram
+              </a>
+            </div>
+          </section>
+
+          <section class="card">
+            <h3 class="quote">Contacts</h3>
+            <p class="subhead">
+              <a
+                href="https://www.linkedin.com/in/michael-merezhko-293028140/"
+                class="btn linked"
+              >
+                LinkedIn
+              </a>
+
+              <a href="mailto:mmieriezhko@gmail.com" class="btn email">
+                Email
+              </a>
+            </p>
+          </section>
+        </div>
       </article>
     </div>
 
