Finally added favicon

--- a/mma.cc.ua/index.html
+++ b/mma.cc.ua/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="description" content="Business card website" />
     <meta name="Keywords" content="Manviel" />
+    <meta name="theme-color" content="#111" />
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/png" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Michael Merezhko</title>
   </head>
