Added link for converting to pdf

--- a/mma.cc.ua/index.html
+++ b/mma.cc.ua/index.html
@@ -219,11 +219,19 @@
                 OOP, React Native, Design patterns
               </h3>
 
-              <a href="https://github.com/Manviel" class="btn github">
+              <a
+                href="https://github.com/Manviel"
+                class="btn github"
+                target="_blank"
+              >
                 GitHub
               </a>
 
-              <a href="https://www.instagram.com/miannelst" class="btn inst">
+              <a
+                href="https://www.instagram.com/miannelst"
+                class="btn inst"
+                target="_blank"
+              >
                 Instagram
               </a>
             </div>
@@ -235,11 +243,16 @@
               <a
                 href="https://www.linkedin.com/in/michael-merezhko-293028140/"
                 class="btn linked"
+                target="_blank"
               >
                 LinkedIn
               </a>
 
-              <a href="mailto:mmieriezhko@gmail.com" class="btn email">
+              <a
+                href="mailto:mmieriezhko@gmail.com"
+                class="btn email"
+                target="_blank"
+              >
                 Email
               </a>
             </p>
