Added current project for bets

--- a/mma.cc.ua/index.html
+++ b/mma.cc.ua/index.html
@@ -201,6 +201,28 @@
             </p>
           </section>
         </div>
+
+        <div class="grid">
+          <section class="card">
+            <h3 class="quote">Technologies and tools</h3>
+            <ul class="list">
+              <li>jQuery</li>
+              <li>Internal CMS</li>
+              <li>PHP</li>
+            </ul>
+          </section>
+
+          <section class="card">
+            <h3 class="quote">Front end developer</h3>
+            <p class="subhead">
+              Site for sports fans, on which you can make bets. With a wide
+              range of sports from football to golf, from MMA to volleyball. You
+              can bet on all sports events, from the World Cup, Tour de France
+              and the NBA to the Premier League, Bundesliga and Series A. The
+              development was carried out on a mobile application and a website.
+            </p>
+          </section>
+        </div>
       </article>
 
       <article class="container">
