Added vue js as new skill

--- a/mma.cc.ua/index.html
+++ b/mma.cc.ua/index.html
@@ -209,6 +209,7 @@
               <li>jQuery</li>
               <li>Internal CMS</li>
               <li>PHP</li>
+              <li>Vue</li>
             </ul>
           </section>
 
@@ -237,9 +238,7 @@
             <img src="./img/avatar.jpg" alt="avatar" class="avatar" />
 
             <div class="flex col">
-              <h3 class="quote">
-                OOP, React Native, Design patterns
-              </h3>
+              <h3 class="quote">OOP, React Native, Design patterns</h3>
 
               <a
                 href="https://github.com/Manviel"
