--- a/mma.cc.ua/index.html
+++ b/mma.cc.ua/index.html
@@ -14,13 +14,13 @@
 
   <body class="flex center">
     <div class="root">
-      <article class="container">
-        <h2 class="header">Merezhko Michael</h2>
-        <h4 class="subhead">Front End Developer</h4>
+      <header class="container" tabindex="0">
+        <h1 class="header">Merezhko Michael</h1>
+        <h2 class="subhead">Front End Developer</h2>
 
         <div class="grid">
           <section class="card">
-            <h3 class="quote">Skills</h3>
+            <h2 class="quote">Skills</h2>
             <ul class="list">
               <li>JavaScript, TypeScript, Python</li>
               <li>React, Redux, Next.js, Apollo Client, Django</li>
@@ -33,22 +33,22 @@
           </section>
 
           <section class="card">
-            <h3 class="quote">Objective</h3>
+            <h2 class="quote">Objective</h2>
             <p class="subhead">
               Continue the career of JS Developer in the company with the
               possibility of development to the level of Senior
             </p>
           </section>
         </div>
-      </article>
+      </header>
 
-      <article class="container">
+      <article class="container" tabindex="1">
         <h2 class="header">Academic Record</h2>
-        <h4 class="subhead">Systems Engineering</h4>
+        <h3 class="subhead">Systems Engineering</h3>
 
         <div class="grid">
           <section class="card">
-            <h3 class="quote">Languages</h3>
+            <h4 class="quote">Languages</h4>
             <ul class="list">
               <li>English - Intermediate</li>
               <li>Russian - Native</li>
@@ -57,7 +57,7 @@
           </section>
 
           <section class="card">
-            <h3 class="quote">2015 - 2021</h3>
+            <h4 class="quote">2015 - 2021</h4>
             <p class="subhead">
               O. M. Beketov National University of Urban Economy in Kharkiv
             </p>
@@ -65,13 +65,13 @@
         </div>
       </article>
 
-      <article class="container">
+      <main class="container" tabindex="2">
         <h2 class="header">Work experience</h2>
-        <h4 class="subhead" id="exp"></h4>
+        <h3 class="subhead" id="exp">0 months</h3>
 
         <div class="grid">
           <section class="card">
-            <h3 class="quote">Technologies and tools</h3>
+            <h4 class="quote">Technologies and tools</h4>
             <ul class="list">
               <li>React, Next JS, Apollo Client</li>
               <li>Django-Graphene</li>
@@ -80,7 +80,7 @@
           </section>
 
           <section class="card">
-            <h3 class="quote">Full Stack developer</h3>
+            <h4 class="quote">Full Stack developer</h4>
             <p class="subhead">
               While working on this project, we developed an admin site and API
               for law firm billing software, including custom fee schedules,
@@ -93,7 +93,7 @@
 
         <div class="grid">
           <section class="card">
-            <h3 class="quote">Technologies and tools</h3>
+            <h4 class="quote">Technologies and tools</h4>
             <ul class="list">
               <li>React, Apollo Client</li>
               <li>Django-Graphene</li>
@@ -102,7 +102,7 @@
           </section>
 
           <section class="card">
-            <h3 class="quote">Full Stack developer</h3>
+            <h4 class="quote">Full Stack developer</h4>
             <p class="subhead">
               The application for find matches when you’re on the bus, at work,
               and even at home from the comfort of your couch. Provides live
@@ -114,7 +114,7 @@
 
         <div class="grid">
           <section class="card">
-            <h3 class="quote">Technologies and tools</h3>
+            <h4 class="quote">Technologies and tools</h4>
             <ul class="list">
               <li>Angular, React</li>
               <li>REST API</li>
@@ -122,7 +122,7 @@
           </section>
 
           <section class="card">
-            <h3 class="quote">Front end developer</h3>
+            <h4 class="quote">Front end developer</h4>
             <p class="subhead">
               The app designed to automate all business processes in diplomatic
               institutions all over the world. The system follows a
@@ -136,7 +136,7 @@
 
         <div class="grid">
           <section class="card">
-            <h3 class="quote">Technologies and tools</h3>
+            <h4 class="quote">Technologies and tools</h3>
             <ul class="list">
               <li>Next JS, React</li>
               <li>REST API</li>
@@ -144,7 +144,7 @@
           </section>
 
           <section class="card">
-            <h3 class="quote">Front end developer</h3>
+            <h4 class="quote">Front end developer</h3>
             <p class="subhead">
               This system consisted of two parts: a public blog and an admin
               panel. Blog part is for viewing news, interviews, upcoming events
@@ -156,7 +156,7 @@
 
         <div class="grid">
           <section class="card">
-            <h3 class="quote">Technologies and tools</h3>
+            <h4 class="quote">Technologies and tools</h3>
             <ul class="list">
               <li>Angular</li>
               <li>OpenStreetMap</li>
@@ -165,7 +165,7 @@
           </section>
 
           <section class="card">
-            <h3 class="quote">Front end developer</h3>
+            <h4 class="quote">Front end developer</h3>
             <p class="subhead">
               The whole project aims to implement a platform for field
               technicians operations. It will be able to manage the assistance
@@ -181,7 +181,7 @@
 
         <div class="grid">
           <section class="card">
-            <h3 class="quote">Technologies and tools</h3>
+            <h4 class="quote">Technologies and tools</h3>
             <ul class="list">
               <li>React</li>
               <li>REST API</li>
@@ -190,7 +190,7 @@
           </section>
 
           <section class="card">
-            <h3 class="quote">Front end developer</h3>
+            <h4 class="quote">Front end developer</h3>
             <p class="subhead">
               This solution is aimed at users who want to know more about their
               privacy and the data that they provide to various sites. The
@@ -204,7 +204,7 @@
 
         <div class="grid">
           <section class="card">
-            <h3 class="quote">Technologies and tools</h3>
+            <h4 class="quote">Technologies and tools</h3>
             <ul class="list">
               <li>jQuery</li>
               <li>Internal CMS</li>
@@ -214,7 +214,7 @@
           </section>
 
           <section class="card">
-            <h3 class="quote">Front end developer</h3>
+            <h4 class="quote">Front end developer</h3>
             <p class="subhead">
               Site for sports fans, on which you can make bets. With a wide
               range of sports from football to golf, from MMA to volleyball. You
@@ -224,21 +224,27 @@
             </p>
           </section>
         </div>
-      </article>
+      </main>
 
-      <article class="container">
+      <footer class="container" tabindex="3">
         <h2 class="header white">Additional Information</h2>
-        <h4 class="subhead white">
+        <h3 class="subhead white">
           I expect interesting projects, new practical skills and opportunities
           for professional growth
-        </h4>
+        </h3>
 
         <div class="grid">
           <section class="flex card">
-            <img src="./img/avatar.jpg" alt="avatar" class="avatar" />
+            <img
+              src="./img/avatar.jpg"
+              alt="avatar"
+              class="avatar"
+              width="100"
+              height="100"
+            />
 
-            <div class="flex col">
-              <h3 class="quote">OOP, React Native, Design patterns</h3>
+            <nav class="flex col">
+              <h4 class="quote">OOP, React Native, Design patterns</h3>
 
               <a
                 href="https://github.com/Manviel"
@@ -252,19 +258,21 @@
                 href="https://www.instagram.com/miannelst"
                 class="btn inst"
                 target="_blank"
+                rel="noopener"
               >
                 Instagram
               </a>
-            </div>
+            </nav>
           </section>
 
           <section class="card">
-            <h3 class="quote">Contacts</h3>
+            <h4 class="quote">Contacts</h3>
             <p class="subhead">
               <a
                 href="https://www.linkedin.com/in/michael-merezhko-293028140/"
                 class="btn linked"
                 target="_blank"
+                rel="noopener"
               >
                 LinkedIn
               </a>
@@ -273,13 +281,14 @@
                 href="mailto:mmieriezhko@gmail.com"
                 class="btn email"
                 target="_blank"
+                rel="noopener"
               >
                 Email
               </a>
             </p>
           </section>
         </div>
-      </article>
+      </footer>
     </div>
 
     <script src="./js/script.js"></script>
